# satellite_wallpaper_android

./: README.md  android_init.cmd  package-lock.json  package.json  resize_image.rs  run.cmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/downloader/: mod.rs
