[package]
name = "satellite_wallpaper_android"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "satellite_wallpaper_android_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "*"
image = "0.24.7"
anyhow = "1"
time = { version = "0.3.28", features = ["macros"] }
once_cell = "1.18.0"
data-encoding = "2.4.0"
minreq = "2.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
